# nrsr-dochadzka

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/processed/: club_attendance.jsonl  metadata.json  mp_attendance.jsonl  votes.jsonl
data/processed/mp_votes/: index.json
data/raw/: _state.json
data/raw/votes/: 1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  1030.json  1031.json  1032.json  1033.json  1034.json  1035.json  1036.json  1037.json  1038.json  1039.json  (+8458 more)
scraper/: scrapy.cfg
scraper/nrsr_attendance/: club_colors.py  items.py  pipelines.py  processing.py  settings.py  site_data.py
scraper/nrsr_attendance/spiders/: mps.py  vote_details.py  (+2 more)
scripts/: build_mp_pages.py  build_site_data.py  build_sitemap.py  collect_vote_details.py  collect_vote_index.py  collect_votes.py  process_data.py
site/: index.html  robots.txt  sitemap.xml
site/assets/: app.js  base.css  common.js  mp.js  option-a.js  option-b.js  option-c.js  styles.css  theme-a.css  theme-b.css  theme-c.css
site/mp/: index.html
site/option-b/: index.html
site/option-c/: index.html
tests/: conftest.py  test_processing.py  test_raw_json_pipeline.py  test_site_data.py  test_smoke.py  test_vote_index_pipeline.py  test_vote_index_spider.py  test_votes_spider.py
(+1499 files in other folders)
