[project]
name = "nrsr-attendance"
version = "0.1.0"
description = "Track Slovak parliament (NRSR) attendance/activity via Scrapy + GitHub Actions + GitHub Pages."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "scrapy>=2.12",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

